(+) docker for myepitechrelay - test

--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,17 @@
 # database
 MYSQL_DATABASE=''
-MYSQL_HOST=''
 MYSQL_USER=''
 MYSQL_PASSWORD=''
 MYSQL_ROOT_PASSWORD=''
 
 # API database
+API_DB_HOST=''
+API_DB_PORT=''
 SECRET=''
-OTHER_APP_TOKEN=''
-PORT=''
+API_DB_TOKEN=''
+
+# my-epitech-relay
+API_DB_HOST2='' # TODO to change
+RELAY_HOST=''
+RELAY_PORT=''
+# # BROWSER_BINARY_PATH='' TODO not use
