--- a/my-epitech-relay/Dockerfile
+++ b/my-epitech-relay/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:12-stretch
 
-# RUN apt-get update && apt-get install chromium -y
+
+RUN apt-get update && apt-get install chromium -y
 
 COPY . /usr/src/app
 WORKDIR /usr/src/app
@@ -8,6 +9,13 @@ WORKDIR /usr/src/app
 RUN npm install
 
 RUN npm run build
+
+ENV HOST="0.0.0.0"
+ENV PORT="8080"
+ENV NO_WINDOW="1"
+ENV BROWSER_BINARY_PATH="/usr/bin/chromium"
+ENV BROWSER_TYPE="chrome"
+ENV BROWSER_ARGS="--no-sandbox"
 
 EXPOSE 8090
 
