(|) all services work

--- a/discord-bot/Dockerfile
+++ b/discord-bot/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:16
-WORKDIR /app/discord-bot
+WORKDIR /app
 COPY ["package*.json", "./"]
 RUN npm install
 COPY . .
-# CMD ["npm", "start"]
 CMD ["node", "src/index.js"]
