--- a/my-epitech-relay/Dockerfile
+++ b/my-epitech-relay/Dockerfile
@@ -1,22 +1,8 @@
 FROM node:12-stretch
-
-
 RUN apt-get update && apt-get install chromium -y
-
 COPY . /usr/src/app
 WORKDIR /usr/src/app
-
 RUN npm install
-
 RUN npm run build
-
-ENV HOST="0.0.0.0"
-ENV PORT="8080"
-ENV NO_WINDOW="1"
-ENV BROWSER_BINARY_PATH="/usr/bin/chromium"
-ENV BROWSER_TYPE="chrome"
-ENV BROWSER_ARGS="--no-sandbox"
-
-EXPOSE 8090
-
+EXPOSE $PORT
 CMD ["npm", "start"]
