(+) add workdir and fix network API

--- a/.env_example
+++ b/.env_example
@@ -1,17 +1,24 @@
-# database
-MYSQL_DATABASE=''
-MYSQL_USER=''
-MYSQL_PASSWORD=''
-MYSQL_ROOT_PASSWORD=''
+# DATABASE
+DATABASE_USER=''
+DATABASE_PASSWORD=''
+DATABASE_ROOT_PASSWORD=''
 
-# API database
-API_DB_HOST=''
+
+# DATABASE API
 API_DB_PORT=''
-SECRET=''
+API_SECRET=''
 API_DB_TOKEN=''
+API_DB_COMPLET=''
 
-# my-epitech-relay
-API_DB_HOST2='' # TODO to change
-RELAY_HOST=''
+
+# RELAY MY-EPITECH-EU
 RELAY_PORT=''
-# # BROWSER_BINARY_PATH='' TODO not use
+RELAY_BROWSER_BINARY_PATH=''
+RELAY_BROWSER_TYPE=''
+
+
+# discord-bot
+DISCORD_WEBHOOK_URL=''
+DISCORD_BOT_FINAL_TOKEN=''
+RELAY_API=''
+DISCORD_BOT_DEV_TOKEN=''
