--- a/api-database/Dockerfile
+++ b/api-database/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:15-alpine
-WORKDIR /app
-COPY ["package*.json", "./"]
+WORKDIR /app/api-database
+RUN git clone https://github.com/EpitechMouliBot/api-db.git .
+# COPY ["package*.json", "./"]
 RUN npm install
-COPY . .
+# COPY . .
 EXPOSE $PORT
 CMD ["node", "src/index.js"]
