(+) env variable for network settings

--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,12 @@
+# NETWORK
+SUBNET='192.168.50.0/24'
+GATEWAY='192.168.50.1'
+DATABASE_IPV4_ADDRESS='192.168.50.2'
+API_DB_IPV4_ADDRESS='192.168.50.3'
+RELAY_IPV4_ADDRESS='192.168.50.4'
+DISCORD_IPV4_ADDRESS='192.168.50.5'
+
+
 # DATABASE
 DATABASE_USER=''
 DATABASE_PASSWORD=''
@@ -8,17 +17,15 @@ DATABASE_ROOT_PASSWORD=''
 API_DB_PORT=''
 API_SECRET=''
 API_DB_TOKEN=''
-API_DB_COMPLET=''
 
 
 # RELAY MY-EPITECH-EU
 RELAY_PORT=''
-RELAY_BROWSER_BINARY_PATH=''
-RELAY_BROWSER_TYPE=''
+RELAY_BROWSER_BINARY_PATH='/usr/bin/chromium'
+RELAY_BROWSER_TYPE='chrome'
 
 
 # discord-bot
 DISCORD_WEBHOOK_URL=''
 DISCORD_BOT_FINAL_TOKEN=''
-RELAY_API=''
 DISCORD_BOT_DEV_TOKEN=''
